templates made and final version 0

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mailchimp/mailchimp_marketing": "^3.0.52",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.9"
   }
 }
