--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
+    "mongoose": "^5.13.3",
     "nodemon": "^2.0.9"
   }
 }
